# contextual-football-metrics

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml
analysis/: 01_data_quality.py  02_feature_stability.py  03_univariate.py  04_bivariate_cxg.py  05_bivariate_cxa.py  06_bivariate_cxt.py  07_correlations.py  08_eda_shots.py  09_eda_sequences.py  10_eda_opponents.py  11_hypothesis_cxg.py  12_hypothesis_cxa.py  13_hypothesis_cxt.py  14_statsbomb_baseline.py  15_zone_xt_priors.py  16_deep_eda.py  17_scoring_validation.py  18_interpretability.py  19_model_comparison.py  20_incremental_lift_vs_baselines.py  21_incremental_lift_cxa.py  22_incremental_lift_cxt.py  23_cxa_composite_calibration.py  24_external_validity.py  25_downstream_reranking.py  _utils.py  run_all.py
configs/: competitions.yaml  features.yaml  models.yaml
configs/profiles/: cloud.yaml  cpu.yaml  gpu.yaml
docs/: cloud_bootstrap.md  data.md  pipeline.md  quickstart.md
docs/analysis_reports/: 01_overview_and_dataset.md  02_data_quality_and_stability.md  03_cxg_analysis.md  04_cxa_analysis.md  05_cxt_correlations_and_baselines.md  06_modeling_implications.md
docs/modeling/cxa/: 01_problem_formulation.md  02_feature_architecture.md  03_model_specifications.md  04_training_methodology.md  05_evaluation_framework.md  06_results_and_discussion.md  07_incremental_lift.md
docs/modeling/cxg/: 01_problem_formulation.md  02_feature_architecture.md  03_model_specifications.md  04_training_methodology.md  05_evaluation_framework.md  06_results_and_discussion.md  07_incremental_lift_and_reconciliation.md
docs/modeling/cxt/: 01_problem_formulation.md  02_feature_architecture.md  03_model_specifications.md  04_training_methodology.md  05_evaluation_framework.md  06_results_and_discussion.md  07_incremental_lift.md
pipelines/: __init__.py  flow.py  gates.py  mlflow_helpers.py
pipelines/stages/: __init__.py  analysis.py  post.py  train.py
reports/: bivariate_cxa_sequence_type_summary.json  correlation_summary.json  cxa_composite_calibration.json  cxa_training_summary.json  cxg_sequence_type_deep_summary.json  cxg_training_summary.json  cxt_training_summary.json  data_quality_summary.json  deep_eda_summary.json  downstream_reranking_cxt.json  external_validity.json  feature_stability_summary.json  hypothesis_cxa.json  hypothesis_cxg.json  hypothesis_cxt.json  incremental_lift_cxa.json  incremental_lift_cxg.json  incremental_lift_cxt.json  interpretability_report.html  model_comparison_cxg.csv  model_comparison_cxg.json  statsbomb_baseline_metrics.json  univariate_stats.json  validity_violations.json  vif_table.json
scripts/: build_features.py  build_results_db.py  ingest.py  monitor.py  repair_possessions.py  score.py  score_gnn_cxa.py  score_set_transformer.py  score_state_value_gnn.py  train_cxa.py  train_cxg.py  train_cxt.py
src/: __init__.py  results_store.py
src/dashboards/: cxa_leaderboard.py  cxt_leaderboard.py
src/evaluation/: interpretability.py  model_comparison.py  validation_splits.py
src/features/: feature_store.py  freeze_frame_features.py  match_context_features.py  opponent_features.py  sequence_features.py  sequence_labeler.py  traditional_features.py
src/ingestion/: __init__.py  data_qa.py  possession_builder.py  provider_mapper.py  schema.py  statsbomb_loader.py
src/models/: __init__.py
src/models/cxa/: __init__.py  baseline.py  cxa_pipeline.py  feature_sets.py  gnn_passing_network.py  shot_creation_model.py  shot_quality_model.py
src/models/cxg/: __init__.py  baseline.py  feature_sets.py  glm_contextual.py  ladder.py  lightgbm_model.py  set_transformer_model.py  xgboost_model.py
src/models/cxt/: __init__.py  baseline.py  cxt_pipeline.py  feature_sets.py  state_value_gnn.py  state_value_model.py  state_value_set_transformer.py
src/models/neural/: __init__.py  base.py  encoders.py  freeze_frame_loader.py
src/models/sequence/: __init__.py  sequence_classifier.py
src/monitoring/: drift_detector.py
src/pipeline/: inference_pipeline.py
src/runtime/: __init__.py  gbm_device.py  profile.py
tests/: test_results_store.py
tests/evaluation/: test_interpretability_phase9.py  test_model_comparison_phase8.py
tests/features/: test_feature_store.py  test_freeze_frame_features.py  test_sequence_features.py  test_sequence_labeler.py  test_traditional_features.py
tests/ingestion/: test_possession_builder.py  test_provider_mapper.py
tests/models/: test_cxa_baseline.py  test_cxa_phase6.py  test_cxg_baseline.py  test_cxg_phase5.py  test_cxt_baseline.py  test_cxt_neural_phase8.py  test_cxt_phase7.py  test_neural_phase8.py  test_sequence_classifier.py
tests/monitoring/: test_drift_detector_phase10.py
tests/pipeline/: test_flow.py  test_gates.py  test_inference_pipeline_phase10.py  test_mlflow_helpers.py  test_production_pointer_reconciliation.py
tests/runtime/: test_gbm_device.py  test_profile.py
