[tool.poetry]
name = "contextual-football-metrics"
version = "0.1.0"
description = "Contextual football metric suite — CxG, CxA, CxT"
authors = []
packages = [{ include = "src" }]

# ── Core dependencies (always installed) ─────────────────────────────────────
[tool.poetry.dependencies]
python       = ">=3.11,<3.14"
pandas       = ">=2.1"
numpy        = ">=1.26"
pyarrow      = ">=14.0"
pydantic     = ">=2.5"
pyyaml       = ">=6.0"
scipy        = ">=1.12"
tqdm         = ">=4.66"
mlflow       = ">=2.12"
statsbombpy  = ">=1.0"

# ── Statistical & tree models ─────────────────────────────────────────────────
[tool.poetry.group.models.dependencies]
scikit-learn     = ">=1.4"
xgboost          = ">=2.0"
lightgbm         = ">=4.3"
catboost         = ">=1.2"
optuna           = ">=3.5"
pygam            = ">=0.9"
statsmodels      = ">=0.14"
imbalanced-learn = ">=0.12"

# ── Neural / graph models (optional — needs CUDA-aware torch wheel) ───────────
# Install with: poetry install --with neural
# For GPU:  pip install torch --index-url https://download.pytorch.org/whl/cu121
[tool.poetry.group.neural]
optional = true

[tool.poetry.group.neural.dependencies]
torch   = ">=2.2"
captum  = ">=0.7"
# torch-geometric: install separately after torch is set up
# pip install torch-geometric torch-scatter torch-sparse

# ── Visualisation & explainability ───────────────────────────────────────────
[tool.poetry.group.viz.dependencies]
matplotlib = ">=3.8"
seaborn    = ">=0.13"
plotly     = ">=5.20"
shap       = ">=0.45"
kaleido    = ">=0.2"

# ── Developer tooling ─────────────────────────────────────────────────────────
[tool.poetry.group.dev.dependencies]
pytest       = ">=8.1"
pytest-cov   = ">=5.0"
ruff         = ">=0.4"
pre-commit   = ">=3.7"
ipykernel    = ">=6.29"
nbformat     = ">=5.10"
ipython      = ">=8.24"

# ── Build system ─────────────────────────────────────────────────────────────
[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths  = ["tests"]
addopts    = "-v --tb=short"
pythonpath = ["."]

# ── Ruff ─────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length    = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B"]
ignore = ["E501", "N803", "N806"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style  = "double"
indent-style = "space"
